# News-Verification-ML-Service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Transformer.py  docker-compose.yaml  kafka_server.py  requirements.txt  test_kafka.py  training.py
domains/Get_News/: Dockerfile  kafka_server.py  load_to_hdfs.py  load_to_mysql_db.py  main.py  pyproject.toml  requirements.txt
domains/Get_News/News_Classification/: pyproject.toml
domains/Get_News/News_Relevancy/: Dockerfile  inference.py  main.py
domains/Get_News/News_Summarization/: inference.py  main.py
domains/News_Classification/: inference.py  main.py  pyproject.toml
domains/News_Relevancy/: Dockerfile  inference.py  main.py  pyproject.toml
domains/News_Summarization/: inference.py  main.py  pyproject.toml
domains/news_crawler/: Dockerfile  ThanhNien_link.csv  VNExpress_link.csv  VTV_link.csv  base.py  base_get_link.py  config.py  cron.sh  dag.py  features_eng.py  get_article.py  get_links.py  main.py  news_links.csv  requirements.txt  test.py  unverified.py  verified.py  verified_source.py
domains/news_crawler/links/: DKN_link_news.csv  Luat_Khoa_link_news.csv  Ngoi_Sao_VNExpress_link_news.csv  Thanh_Nien_link_news.csv  VTV_link.csv  VTV_link_news.csv  VnExpress_link_news.csv  combined_data.csv
domains/training/: Dockerfile  kafka_server.py  load_to_mysql_db.py  pyproject.toml  requirements.txt  test_kafka.py  training.py
domains/training/models/: CNN_GRU.py  CNN_LSTM.py  GRU.py  LSTM.py  SVM.py  Transformer.py
extension/: manifest.json  popup.css  popup.html  popup.js
(+1 files in other folders)
